@@ -1,0 +1,61 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.apache.hadoop.mapred;
+
+import java.io.File;
+import java.io.IOException;
+
+import junit.framework.Assert;
+import junit.framework.TestCase;
+
+import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.mapred.TestFairScheduler.FakeTaskTrackerManager;
+
+public class TestFairSchedulerEventLog extends TestCase {
+  
+  private File logFile;
+  
+  /**
+   * Make sure the scheduler creates the event log.
+   */
+  public void testCreateEventLog() throws IOException {
+    Configuration conf = new Configuration();
+    conf.set("mapred.fairscheduler.eventlog.enabled", "true");
+    
+    FakeTaskTrackerManager taskTrackerManager = new FakeTaskTrackerManager(1, 1);
+    
+    FairScheduler scheduler = new FairScheduler();
+    scheduler.setConf(conf);
+    scheduler.setTaskTrackerManager(taskTrackerManager);
+    scheduler.start();
+    
+    FairSchedulerEventLog eventLog = scheduler.getEventLog();
+    
+    scheduler.terminate();
+    
+    logFile = new File(eventLog.getLogFile());
+    Assert.assertTrue(logFile.exists());
+  }
+  
+  @Override
+  public void tearDown() {
+    logFile.delete();
+    logFile.getParentFile().delete(); // fairscheduler/
+  }
+}
